# gitlab-to-forgejo

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  PROJECT  README.md  agent.md  docker-compose.ngrok.yml  docker-compose.yml  mise.toml  pyproject.toml
fixtures/gitlab-mini/: README.md  backup_information.yml
fixtures/gitlab-mini/db/: database.sql
fixtures/gitlab-mini/repositories/default/@hashed/82/9f/829f00a11ddfdebb51b67a913981eddb7937c3f8f01f4140415a24ff1cc29609.git/1770183352_2026_02_04_18.4.6/: 001.bundle  001.refs
fixtures/wiki-refs/: master_only.refs
scripts/: bootstrap_forgejo.sh  wait_for_url.sh
src/gitlab_to_forgejo/: __main__.py  cli.py  copy_parser.py  forgejo_client.py  forgejo_db.py  forgejo_wiki.py  git_push.py  git_refs.py  gitlab_uploads.py  migrator.py  plan_builder.py
tests/: test_cli.py  test_copy_parser.py  test_docker_compose_defaults.py  test_forgejo_client.py  test_forgejo_db_fast_issues.py  test_forgejo_db_metadata.py  test_forgejo_db_passwords.py  test_forgejo_db_sequences.py  test_git_push.py  test_git_refs.py  test_gitlab_uploads.py  test_migrator.py  test_migrator_avatars.py  test_migrator_fast_db.py  test_migrator_issue_uploads.py  test_migrator_issues_and_prs.py  test_migrator_labels.py  test_migrator_logging.py  test_migrator_merge_request_heads.py  test_migrator_repos.py  test_migrator_reserved_usernames.py  test_migrator_user_keys.py  test_plan_builder.py  test_plan_builder_labels.py  test_plan_builder_nullable_rows.py  test_plan_builder_user_keys.py  test_smoke.py
(+2 files in other folders)
